[tool.poetry]
name = "offchain"
version = "0.0.1"
description = "Open source metadata processing framework"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "offchain"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.9.2"
python-json-logger = "^2.0.4"
urllib3 = "^1.26.11"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

