[tool.poetry]
name = "offchain"
version = "0.2.6"
description = "Open source metadata processing framework"
authors = ["Zora eng <eng@zora.co>"]
readme = "README.md"
documentation = "https://ourzora.github.io/offchain"

[tool.poetry.dependencies]
python = ">=3.9 <4"
requests = "^2.28.1"
pydantic = "^1.9.2"
python-json-logger = "^2.0.4"
urllib3 = "^1.26.11"
web3 = "^5.30.0"
tenacity = "^8.0.1"
aiohttp = "^3.8.5"
types-requests = "^2.31.0.2"
ruff = "^0.0.290"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
mkdocs-material = "^8.4.2"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pytest-httpx = "^0.26.0"
mypy-upgrade = "^0.0.1b5"
pytest-async = "^0.1.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
